[BUG] Public view serving indicator alignment
Fixing the serving icon on the admin side, broke it for the public
side.

--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -139,12 +139,22 @@ small {
   }
 }
 
-.serving {
+.admin-serving {
   width: 20px;
   height: 20px;
   display: inline-block;
   position: relative;
   top: 33px;
+  left: 5px;
+  background: url(/images/ball.svg) no-repeat;
+}
+
+.public-serving {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  position: relative;
+  top: 5px;
   left: 5px;
   background: url(/images/ball.svg) no-repeat;
 }
